--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,16 @@ management.endpoint.health.show-details=always
 logging.file.name=./log/${spring.application.name}.log
 logging.file.max-size=1MB
 logging.file.max-history=90
-logging.pattern.rolling-file-name=./log/${spring.application.name}-%d{yyyy-MM-dd}.%i.log 
+logging.pattern.rolling-file-name=./log/${spring.application.name}-%d{yyyy-MM-dd}.%i.log
+
+spring.datasource.url=jdbc:h2:file:./DB
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.batch.job.enabled=false
+
+file.input=coffee-list.csv
+
+# mongodb
+spring.data.mongodb.uri=mongodb://localhost:27017/autolink-test-service
+#      host: localhost
+#      port: 27017
+#      uri: mongodb://user:secret@mongo1.example.com:12345,mongo2.example.com:23456/test
